# shellai

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
shellai/: __init__.py  agent.py  cache.py  cli.py  config.py  display.py  executor.py  history.py  metrics.py  ollama_client.py  prompts.py  repl.py  router.py  safety.py  server.py  tools.py  utils.py
tests/: test_agent.py  test_cache.py  test_cli.py  test_metrics.py  test_router.py  test_safety.py  test_server.py
