[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwenshell"
version = "0.2.1"
description = "Natural language Linux terminal assistant powered by Ollama"
readme = "README.md"
license = "MIT"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
keywords = ["ollama", "llm", "cli", "shell", "natural-language", "linux", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]

[project.urls]
Homepage      = "https://github.com/sarvadnya2030/shellai"
Documentation = "https://github.com/sarvadnya2030/shellai#readme"
Repository    = "https://github.com/sarvadnya2030/shellai"
Issues        = "https://github.com/sarvadnya2030/shellai/issues"

[project.scripts]
qwenshell = "shellai.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy", "build", "twine", "codecov"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
